<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhotoSyn</string>
    <string name="tv_intro">What do you want to do?</string>
    <string name="action_settings">Settings</string>
    <string name="btn_ok">OK</string>
    <string name="btn_pick">Pick From Gallery</string>
    <string name="btn_pick_mul">Pick Photos From Gallery</string>
    <string name="btn_sync_all">Sync Entire Gallery</string>
    <string name="btn_sync_sec">Sync Selected Photos</string>
    <string name="btn_sync_test">Sync Photos</string>
    <string name="btn_download_photo">Download Photos from Google Drive to Gallery</string>
    <string name="btn_upload_photo">Upload Photos from Gallery to Google Drive</string>
    <string name="btn_setting">Setting</string>
    <string name="btn_view_model">View Model</string>
    <string name="btn_share">Share with My Friends</string>
    <string name="tv_preview">Preview</string>
    <string name="upload_google_drive">Upload to Google Drive</string>
    <string name="image_name">Title</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save_photo">Save Photo to Your Gallery</string>
    <string name="recipe_context_edit">Edit</string>
    <string name="recipe_context_rename">Rename</string>
    <string name="recipe_context_delete">Delete</string>
        <string name="action_bar_code">Bar code scanner</string>
            <string name="action_text">Text input</string>
                <string name="action_email">Share by email</string>
    <string name="action_voice">Voice input</string>
        <string name="action_shopping">Cloud Search</string>
    
    <string-array name="nav_drawer_items">
        <item>PhotoSyn</item>
        <item>Sync Photos from Gallery to Google Drive</item>
        <item>Sync Photos from Google Drive to Gallery</item>
        <item>Setting</item>
        <item>Share with My Friends</item>
    </string-array>

</resources>