<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.photosyn.MainActivity" >

    <TextView
        android:id="@+id/tv_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_intro" />

    <Button
        android:id="@+id/btn_Upload"
        style="@style/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_intro"
        android:layout_below="@+id/tv_intro"
        android:layout_marginTop="59dp"
        android:background="@drawable/btn_sel"
        android:onClick="showPhonePhoto"
        android:text="@string/btn_upload_photo" />

    <Button
        android:id="@+id/btn_Downlaod"
        style="@style/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_intro"
        android:layout_below="@+id/btn_upload"
        android:layout_marginTop="139dp"
        android:background="@drawable/btn_sel"
        android:onClick="showDrivePhoto"
        android:text="@string/btn_download_photo" />

    <Button
        android:id="@+id/btn_Setting"
        style="@style/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_intro"
        android:layout_below="@+id/btn_upload"
        android:layout_marginTop="219dp"
        android:background="@drawable/btn_sel"
        android:text="@string/btn_setting" />

    <Button
        android:id="@+id/btn_View_Model"
        style="@style/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_intro"
        android:layout_below="@+id/btn_upload"
        android:layout_marginTop="299dp"
        android:background="@drawable/btn_sel"
        android:text="@string/btn_view_model" />

    <Button
        android:id="@+id/btn_Share"
        style="@style/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_intro"
        android:layout_below="@+id/btn_upload"
        android:layout_marginTop="379dp"
        android:background="@drawable/btn_sel"
        android:text="@string/btn_share" />

</RelativeLayout>